--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,6 +11,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 80px;
   font-style: italic;
+  width: 500px;
 }
 
 .content p {
@@ -19,14 +20,15 @@
   opacity: .5;
   // font-weight: lighter;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  width: 500px;
 }
 
 #myVideo {
-  position: relative;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  height: 100vh;
+  // position: relative;
+  // right: 0;
+  // bottom: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .content {
@@ -34,7 +36,7 @@
   top: 250px;
   left: 150px;
   color: #f1f1f1;
-  width: 100%;
+  // width: 100%;
   padding: 20px;
 }
 
