--- a/app/views/ghosts/index.html.erb
+++ b/app/views/ghosts/index.html.erb
@@ -1,26 +1,27 @@
 <!-- <div class="container d-flex py-2"> -->
 <div class="container">
-  <div class="">
-    <%= form_tag ghosts_path, method: :get do %>
+  <h1 class="py-3 text-center font-weight-bold">Browse Ghosts</h1>
+    <div class="form-inline py-4 d-flex justify-content-center">
+      <%= form_tag ghosts_path, method: :get do %>
       <%= text_field_tag :query,
         params[:query],
-        class: "form-control",
+        class: "form-control rounded",
         placeholder: "Find a ghost"
       %>
-      <%= submit_tag "Search", class: "btn btn-dark" %> <%= link_to "Clear", ghosts_path, class: "btn btn-dark" %>
-    <% end %>
-  </div>
+      <% end %>
+      <%= submit_tag "Search", class: "mr-1 ml-1 btn btn-dark rounded" %>
+      <%= link_to "Clear", ghosts_path, class: "btn btn-dark rounded" %>
+    </div>
 
-  <h1 class="p-3 text-center font-weight-bold">Browse Ghosts</h1>
   <div class="cards">
   <% @ghosts.each do |ghost| %>
     <% if ghost.photo.attached? %>
       <%= link_to ghost_path(ghost), class: "text-decoration-none" do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path ghost.photo.key, height: 300, crop: :fill %>')">
-          <p><%= ghost.name %></p>
-          <% if ghost.average_rating %>
-          <p><%= '⭐️' * ghost.average_rating %></p>
-          <% end %>
+        <div class="card-category ghost-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path ghost.photo.key, height: 300, crop: :fill %>')">
+          <p class="ghost-name"><%= ghost.name %></p>
+          <h6 class="ghost-description"><%= ghost.description %></h6>
+        </div>
+        <div>
         </div>
       <% end %>
     <% else %>
