--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,25 +13,18 @@
   <div class="content">
     <h1>Hire a Ghost</h1>
     <p>All in good spirit</p>
-    <!-- <a href="http://localhost:3000/users/sign_in"><button type="button" class="btn btn-dark"><i class="fas fa-arrow-right"></i></button></a> -->
+    <%= link_to "Browse All Ghosts", ghosts_path, class: 'btn btn-light p-2' %>
   </div>
-  <button type="button" class="btn btn-dark" id="stay">Unique Stays</button>
+</div>
+
+<!--   <button type="button" class="btn btn-dark" id="stay">Unique Stays</button>
   <button type="button" class="btn btn-dark" id="experience">Discover Experiences</button>
-  <button type="button" class="btn btn-dark" id="ghost">Host a Ghost</button>
+  <button type="button" class="btn btn-dark" id="ghost">Host a Ghost</button> -->
 <!--   <div class="home-cards">
     <button type="button" class="btn btn-dark" id="stay">Unique Stays</button>
     <button type="button" class="btn btn-dark" id="experience">Discover Experiences</button>
     <button type="button" class="btn btn-dark" id="ghost">Host a Ghost</button>
   </div> -->
-</div>
-
-<div class="footer">
-  <div class="footer-links">
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-  </div>
-</div>
 <!--  <div class="home-cards">
   <div class="card">
     <img class="card-img-top" src="https://images.unsplash.com/photo-1620542120227-f8c552199b27?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80" alt="Card image cap">
